Upgrade to Lucene 10.3.2 (#3151)